Повне оновлення проекту для деплою

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:cv2serv.database.windows.net,1433;Database=cv2db;Integrated Security=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:cv2serv.database.windows.net,1433;Database=cv2db;User ID=mvcuser;Password=StrongPassword123!;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AppSettings": {
     "SomeSetting": "SomeValue"
