--- a/cvicenie_mvc.csproj
+++ b/cvicenie_mvc.csproj
@@ -1,13 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <!-- Якщо включаємо файли вручну -->
-    <EnableDefaultContentItems>false</EnableDefaultContentItems>
+    <UserSecretsId>c4679496-13a5-49ee-9e2b-487f5f4fb9e8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,12 +14,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Views\**\*.*" CopyToOutputDirectory="PreserveNewest" />
     <Content Include="wwwroot\**\*.*" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
